@@ -17,3 +17,5 @@ Código:
 	16/10/2022: imageToString mejorado
 	17/10/2022: Archivo de pruebas iniciado y cambios en los nombres de los archivos al formato correcto
 	18/10/2022: Mejoras de tipo en image y pixhex
+	19/10/2022: Informe casi terminado
+	20/10/2022: Documentación
